--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -16,3 +16,46 @@
     right: 0.75rem;
     top: 0.5rem;
 }
+
+.input-container {
+    position: relative;
+    display: inline-block;
+}
+
+    .input-container > .tag-input {
+        background-color: #fff;
+        border: 1px dashed;
+        width: 100px;
+        border-radius: 5px;
+        box-sizing: border-box;
+        padding: 2px 10px 2px 30px;
+        font-size: small;
+    }
+
+    .input-container .tag-input:focus {
+        outline: none;
+    }
+
+    .input-container .tag-input-placeholder-icon {
+        color: gray;
+        position: absolute;
+        left: 10px; /* Adjust as needed */
+        top: 5px; /* Adjust as needed */
+    }
+
+.item-tags {
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 6px 10px;
+    margin-right: 5px;
+    font-size: small;
+    background-color: #355dff !important
+}
+
+.form-control .badge-close span {
+    padding-left: 3px;
+}
+
+.border-radius-0{
+    border-radius: 0px;
+}
