--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -205,7 +205,7 @@
                                         <TableHeaderCell Class="text-center">@L["ItemName"]</TableHeaderCell>
                                         <TableHeaderCell Class="text-center">
                                             @L["SKU"]
-                                            @if(ItemDetailsList != null && ItemDetailsList.Count > 0)
+                                            @if (ItemDetailsList != null && ItemDetailsList.Count > 0)
                                             {
                                                 <Span Class="d-block pt-1 text-primary cursor-pointer"
                                                 @onclick="OpenGenerateSKUModal">
@@ -434,17 +434,16 @@
                                 </div>
                                 <div class="col-md-10">
                                     <SelectList TItem="string"
-                                            TValue="string"
-                                            Data="@SKUModel.DropdownOptions"
-                                            TextField="@((item)=>item)"
-                                            ValueField="@((item)=>item)"
-                                            Size="Size.Small"
-                                            SelectedValue="@item.SelectedSampleValue"
-                                            SelectedValueChanged="@((value) => OnDropdownOptionsChanged(item, value))"
-                                            />
+                                                TValue="string"
+                                                Data="@SKUModel.DropdownOptions"
+                                                TextField="@((item)=>item)"
+                                                ValueField="@((item)=>item)"
+                                                Size="Size.Small"
+                                                SelectedValue="@item.SelectedSampleValue"
+                                                SelectedValueChanged="@((value) => OnDropdownOptionsChanged(item, value))" />
                                 </div>
                                 <div class="col-md-2 text-center">
-                                    @if(item != SKUModel.SKUModelOptions.Last())
+                                    @if (item != SKUModel.SKUModelOptions.Last())
                                     {
                                         <label class="sku-preview-label">@SKUModel.SeparatedBy</label>
                                     }
@@ -452,28 +451,44 @@
                             </div>
 
                             <div class="form-group row">
-                                <div class="col-lg-10 col-md-10">
-                                    <label class="form-label">@L["Show"]</label>
-                                </div>
-                                <div class="col-lg-8 col-md-8">
-                                    <div class="input-group mb-3">
-                                        <Dropdown>
-                                            <DropdownToggle Size="Size.Small" Class="btn btn-sm btn-outline-secondary">
-                                                @L[item.DropdownDisplayValue]
-                                            </DropdownToggle>
-                                            <DropdownMenu>
-                                                <DropdownItem @onclick="() => UpdateDropdownDisplayValue(item, 'F')">@L["First"]</DropdownItem>
-                                                <DropdownItem @onclick="() => UpdateDropdownDisplayValue(item, 'L')">@L["Last"]</DropdownItem>
-                                            </DropdownMenu>
-                                        </Dropdown>
-                                        <input type="number" min="0" max="6" class="form-control form-control-sm" 
-                                                   value="@item.CharactersLength" 
-                                                   @oninput="((ChangeEventArgs e) => CharactersLengthInputChange(item, e))" />
+                                @if (item.CustomValueEnabled)
+                                {
+                                    <div class="col-lg-10 col-md-10">
+                                        <label class="form-label">@L["CustomValue"]</label>
                                     </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4">
-                                    <label class="form-label">@L["Letters"]</label>
-                                </div>
+                                    <div class="col-lg-10 col-md-10">
+                                    <input type="text" class="form-control form-control-sm"
+                                           value="@item.CustomValue"
+                                    @oninput="((ChangeEventArgs e) => CustomValueChanged(item, e))" />
+                                    </div>
+                                }
+                                else
+                                {
+                                    <div class="col-lg-10 col-md-10">
+                                        <label class="form-label">@L["Show"]</label>
+                                    </div>
+                                    <div class="col-lg-8 col-md-8">
+                                        <div class="input-group mb-3">
+                                            <Dropdown>
+                                                <DropdownToggle Size="Size.Small" Class="btn btn-sm btn-outline-secondary">
+                                                    @L[item.DropdownDisplayValue]
+                                                </DropdownToggle>
+                                                <DropdownMenu>
+                                                    <DropdownItem @onclick="() => UpdateDropdownDisplayValue(item, 'F')">@L["First"]</DropdownItem>
+                                                    <DropdownItem @onclick="() => UpdateDropdownDisplayValue(item, 'L')">@L["Last"]</DropdownItem>
+                                                </DropdownMenu>
+                                            </Dropdown>
+                                            <input type="number" min="0" max="6" class="form-control form-control-sm"
+                                                   value="@item.CharactersLength"
+                                            @oninput="((ChangeEventArgs e) => CharactersLengthInputChange(item, e))" />
+                                        </div>
+
+                                    </div>
+                                    <div class="col-lg-4 col-md-4">
+                                        <label class="form-label">@L["Letters"]</label>
+                                    </div>
+                                }
+
                             </div>
                         </div>
                     }
@@ -485,7 +500,6 @@
                     @L["Cancel"]
                 </Button>
                 <Button Color="Color.Primary"
-                        Type="@ButtonType.Submit"
                         PreventDefaultOnSubmit="true"
                         Clicked="GenerateSKU">
                     @L["GenerateSKU"]
