--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/CreateItem.razor
@@ -67,26 +67,67 @@
                     </div>
                     <div class="col-10 row">
                         <Field>
-                            <FilePicker Multiple Upload="@LoadFilesDragDrop" ShowMode="FilePickerShowMode.List" />
+                            <FilePicker @ref="FilePickerCustom"
+                                        Multiple
+                                        Upload="OnFileUploadAsync"
+                                        ShowMode="FilePickerShowMode.List">
+                                <FileTemplate>
+                                    <Div Flex="Flex.JustifyContent.Between">
+                                        <Div>
+                                            <Heading Size="HeadingSize.Is6">@context.File.Name</Heading>
+                                            <Paragraph>@FilePicker.GetFileSizeReadable(context.File)</Paragraph>
+                                        </Div>
+                                        <Div Class="ps-2">
+                                            @if ( context.File.Status == FileEntryStatus.Ready )
+                                            {
+                                                <Icon TextColor="TextColor.Primary" Name="IconName.FileUpload" />
+                                            }
+                                            else if ( context.File.Status == FileEntryStatus.Uploading )
+                                            {
+                                                <Icon TextColor="TextColor.Warning" Name="IconName.Bolt" />
+                                            }
+                                            else if ( context.File.Status == FileEntryStatus.Uploaded )
+                                            {
+                                                <Icon TextColor="TextColor.Success" Name="IconName.CheckCircle" />
+                                            }
+                                            else if ( context.File.Status == FileEntryStatus.Error )
+                                            {
+                                                <Icon TextColor="TextColor.Danger" Name="IconName.TimesCircle" />
+                                            }
+                                        </Div>
+                                    </Div>
+                                </FileTemplate>
+                                <ButtonsTemplate>
+                                    <Progress Value="@FilePickerCustom.GetProgressPercentage()" />
+                                    <Buttons Class="mt-2 d-flex justify-content-end">
+                                        <Button Clicked="@context.Clear" Color="Color.Warning"><Icon Name="IconName.Clear" /></Button>
+                                        <Button Clicked="@context.Upload" Color="Color.Primary"><Icon Name="IconName.FileUpload" /></Button>
+                                    </Buttons>
+                                </ButtonsTemplate>
+                            </FilePicker>
                         </Field>
                     </div>
                 </div>
-                <div Class="col-12 row">
-                    <div class="col-2"></div>
-                    <div class="col-10">
-                        <div class="image-list-container">
-                            @foreach (var image in ItemImageList)
-                            {
-                                <div class="image-container">
-                                    <Image class="blur-image" Source="@image" Text="Item Image" Fluid />
-                                    <button class="delete-button">
-                                        <i class="fa fa-trash"></i>
-                                    </button>
-                                </div>
-                            }
+                @if(CreateItemDto.ItemImages.Count > 0)
+                {
+                    <div Class="col-12 row">
+                        <div class="col-2"></div>
+                        <div class="col-10">
+                            <div class="image-list-container">
+                                @foreach (var image in CreateItemDto.ItemImages)
+                                {
+                                    <div class="image-container">
+                                        <Image class="blur-image" Source="@image.ImagePath" Text="Item Image" Fluid />
+                                        <button class="delete-button" @onclick="() => DeleteImageAsync(image.BlobImageName)">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </div>
+                                }
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
+
                 <div class=" col-12 row">
                     <div class="col-2">
                         <fieldLabel>@L["ItemDescription"]</fieldLabel>
