--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -118,13 +118,6 @@
     border: 1px dashed rgb(150, 113, 36);
 }
 
-    /*.image-list-container img {
-        height: 100px;
-        width: auto;
-        margin-right: 10px;
-        border-radius: 0.5rem;
-        margin-bottom: 10px;
-    }*/
 .image-container {
     position: relative;
     height: 100px;
@@ -147,6 +140,7 @@
         height: 100%;
         width: 100%;
         border-radius: 0.5rem;
+        border: 1px solid rgb(150, 113, 36);
     }
 
     .image-container:hover img.blur-image {
