--- a/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/blazor-global-styles.css
@@ -164,3 +164,12 @@
     .image-container:hover .delete-button {
         opacity: 1;
     }
+
+.b-file-picker .b-text-drop {
+    padding: 60px !important;
+    text-transform: capitalize;
+    font-size: large;
+    font-weight: bolder;
+    color: #000;
+    background-color: #fffcea;
+}
