--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -172,7 +172,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 row">
+        <div class="col-12 row mt-2">
             <div class="col-2">
                 <label>@L["ItemStyle"]</label>
             </div>
