--- a/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ItemManagement/EditItem.razor
@@ -29,7 +29,7 @@
                 </span>
             </div>
         </div>
-        <div class="col-12 row">
+        <div class="col-12 row mt-2">
             <div class="col-2">
                 <label>@L["ItemImage"]</label>
             </div>
@@ -81,7 +81,7 @@
 
         @if(UpdateItemDto?.Images != null && UpdateItemDto.Images.Count > 0)
         {
-            <div Class="col-12 row">
+            <div Class="col-12 row mt-2">
                 <div class="col-2"></div>
                 <div class="col-10">
                     <div class="image-list-container">
